--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6371755899862858"
      crossorigin="anonymous"></script>
     <div>
-    <title>PurePro4561 | All Your Favorite Games In One Place</title>
+    <title>UBG1001 | All Your Favorite Games In One Place</title>
     <div class="topnav">
   <a class="active" href="https://purepro4561.github.io/">Home</a>
   <a href="games.html">Games</a>
-  <a href="https://youtube.com/@purepro4561">YouTube</a>
-  <a href="mailto: purepro4561@gmail.com">Contact Me</a>
-  <a href="https://docs.google.com/forms/d/166z5qJcBGLJGZQ_v3olCz8s-C4r2IBdPoQEWw3nuXFU/viewform?edit_requested=true">Request A Game</a>
+  <a href="">BLANK</a>
+  <a href="">BLANK</a>
+  <a href="">BLANK</a>
   <a href="terms">Privacy Policy</a>
 </div>
     </div>
@@ -32,8 +32,8 @@
     <body>
           <center>
               <div>
-              <a href="https://purepro4561.github.io/"><img src="Untitled drawing.svg" alt="Logo" style="width: 150px; height: 150px;" /></a>
-          <h1>PurePro4561</h1>
+              <a href="https://officialtrems.github.io/secretrespritory.github.io/index.html"><img src="Untitled drawing.svg" alt="Logo" style="width: 150px; height: 150px;" /></a>
+          <h1>UBG1001</h1>
                 <h1>All Your Favorite Games In One Place</h1>
               </div>
               <a href="games.html" class="button">Play!</a>
@@ -47,10 +47,10 @@
                   <a href="RS.html" class="button">More Stuff</a>
               </div>
               <div>
-                  <a href="https://twitch.tv/PurePro4561" class="button">I'm Live!</a>
+                  <a href="" class="button">BLANK</a>
               </div>
             <div>
-                 <a href="mailto: purepro4561@gmail.com" class="button">Contact Me</a>
+                 <a href="" class="button">BLANK</a>
                </div>
         </center>
     </body>
